--- a/formulaire.css
+++ b/formulaire.css
@@ -47,3 +47,9 @@ button[type="reset"]:hover,
 button[type="button"]:hover {
     background-color: #c82333;
 }
+body {
+    background-image: url("plan6.jpg");
+    background-size: cover; /* Pour que l'image couvre tout l'arrière-plan */
+    background-repeat: no-repeat; /* Pour éviter la répétition de l'image */
+    /* Vous pouvez ajouter d'autres propriétés de background ici, comme background-position */
+}
