--- a/tableau.css
+++ b/tableau.css
@@ -33,3 +33,9 @@ table{
 td, th{
     padding: 8px;
 }
+body {
+    background-image: url("plan6.jpg");
+    background-size: cover; /* Pour que l'image couvre tout l'arrière-plan */
+    background-repeat: no-repeat; /* Pour éviter la répétition de l'image */
+    /* Vous pouvez ajouter d'autres propriétés de background ici, comme background-position */
+}
