--- a/Page3.css
+++ b/Page3.css
@@ -35,8 +35,5 @@ word-spacing: -3px;
 { 
 font: italic bold 120%/140% Arial, sans-serif;
 body {
-    background-image: url("plan6.jpg");
-    background-size: cover; /* Pour que l'image couvre tout l'arrière-plan */
-    background-repeat: no-repeat; /* Pour éviter la répétition de l'image */
-    /* Vous pouvez ajouter d'autres propriétés de background ici, comme background-position */
+    background-color: black 
 }
