--- a/Page3.css
+++ b/Page3.css
@@ -2,3 +2,29 @@ body {
     background-color: black;
     color: white;
 }
+
+body {
+    text-align: center;
+}
+p {
+    margin: 20px;
+    line-height: 1.6;
+}
+body {
+    font-family: 'Arial', sans-serif;
+    font-size: 18px;
+}
+body {
+    background-color: #181818;
+}
+strong {
+    color: yellow;
+}
+button.suivant {
+    background-color: green;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
