--- a/formulaire.css
+++ b/formulaire.css
@@ -61,3 +61,5 @@ button:hover {
 .footer.suivant:hover {
     background-color: #FF4500;
 }
+background: repeating-linear-gradient(45deg, orange, orange 10px, black 10px, black 20px);
+
