--- a/formulaire.css
+++ b/formulaire.css
@@ -49,7 +49,7 @@ corps {
   
   entrée : focus, zone de texte : focus, sélection : focus {
     couleur de bordure : #1e88e5 ;
-    couleur d'arrière-plan : orange ;
+    couleur d'arrière-plan : Dark orang ;
     contour : aucun ;
   }
   }
